--- a/package.json
+++ b/package.json
@@ -3,14 +3,17 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
-  "dependencies": {
+  "devDependencies": {
     "@babel/cli": "^7.6.2",
     "@babel/core": "^7.6.2",
     "@babel/plugin-proposal-object-rest-spread": "^7.6.2",
-    "@babel/preset-env": "^7.6.2"
+    "@babel/preset-env": "^7.6.2",
+    "babel-loader": "^8.0.6",
+    "webpack": "^4.41.0",
+    "webpack-cli": "^3.3.9"
   },
   "scripts": {
-    "dev": "babel ./src/main.js -o ./bundle.js -w",
+    "dev": "webpack --mode=development -w",
     "lesson-01-01": "babel ./src/hands_on_01/lesson-01.js -o ./bundle.js -w",
     "lesson-01-02": "babel ./src/hands_on_01/lesson-02.js -o ./bundle.js -w",
     "lesson-01-03": "babel ./src/hands_on_01/lesson-03.js -o ./bundle.js -w",
