--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "@babel/preset-env": "^7.6.2",
     "babel-loader": "^8.0.6",
     "webpack": "^4.41.0",
-    "webpack-cli": "^3.3.9"
+    "webpack-cli": "^3.3.9",
+    "webpack-dev-server": "^3.8.2"
   },
   "scripts": {
-    "dev": "webpack --mode=development -w",
+    "dev": "webpack-dev-server --mode=development",
+    "build": "webpack --mode=production",
     "lesson-01-01": "babel ./src/hands_on_01/lesson-01.js -o ./bundle.js -w",
     "lesson-01-02": "babel ./src/hands_on_01/lesson-02.js -o ./bundle.js -w",
     "lesson-01-03": "babel ./src/hands_on_01/lesson-03.js -o ./bundle.js -w",
