--- a/package.json
+++ b/package.json
@@ -16,12 +16,11 @@
   "scripts": {
     "dev": "webpack-dev-server --mode=development",
     "build": "webpack --mode=production",
-    "lesson-01-01": "babel ./src/hands_on_01/lesson-01.js -o ./bundle.js -w",
-    "lesson-01-02": "babel ./src/hands_on_01/lesson-02.js -o ./bundle.js -w",
-    "lesson-01-03": "babel ./src/hands_on_01/lesson-03.js -o ./bundle.js -w",
-    "lesson-01-04": "babel ./src/hands_on_01/lesson-04.js -o ./bundle.js -w",
-    "lesson-01-05": "babel ./src/hands_on_01/lesson-05.js -o ./bundle.js -w",
-    "lesson-01-06": "babel ./src/hands_on_01/lesson-06.js -o ./bundle.js -w",
-    "lesson-01-07": "babel ./src/hands_on_01/lesson-07.js -o ./bundle.js -w"
+    "lesson-01-01": "babel ./src/hands_on_01/lesson-01.js -o ./public/bundle.js -w",
+    "lesson-01-02": "babel ./src/hands_on_01/lesson-02.js -o ./public/bundle.js -w",
+    "lesson-01-03": "babel ./src/hands_on_01/lesson-03.js -o ./public/bundle.js -w",
+    "lesson-01-04": "babel ./src/hands_on_01/lesson-04.js -o ./public/bundle.js -w",
+    "lesson-01-05": "babel ./src/hands_on_01/lesson-05.js -o ./public/bundle.js -w",
+    "lesson-01-06": "babel ./src/hands_on_01/lesson-06.js -o ./public/bundle.js -w"
   }
 }
