--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "lesson-01-05": "babel ./src/hands_on_01/lesson-05.js -o ./public/bundle.js -w",
     "lesson-01-06": "babel ./src/hands_on_01/lesson-06.js -o ./public/bundle.js -w",
     "lesson-01-07": "babel ./src/hands_on_01/lesson-07.js -o ./public/bundle.js -w"
+  },
+  "dependencies": {
+    "axios": "^0.19.0"
   }
 }
